# recipe-organizer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: build-executable-artifact.yml  build-executable.yml  build-windows-executable-artifact.yml  run-tests.yml
assets/sample_data/: invalid.json  recipe.json  recipe.txt  recipe_01.json  recipe_02.json
commands/: command.py  command_invoker.py  command_new.py  command_open.py  command_save.py
events/: event.py  event_observer.py  event_publisher.py
gui/: app_window.py  list_item_holder.py
gui/event_display/: event_display.py
gui/font_manager/: font_manager.py
gui/interfaces/: widget_container.py
gui/menu_bar/: menu_bar.py
gui/recipe_form/: recipe_form.py
gui/recipe_form/form_label/: form_label.py
gui/recipe_form/ingredient_form/: ingredient_form.py
gui/recipe_selection/: recipe_selection.py
recipe/: recipe.py
recipe/events/: recipe_event.py  recipe_event_observer.py  recipe_event_publisher.py
recipe/ingredient/: ingredient.py
recipe_organizer/: app.py
recipe_organizer/commands/: command_invoker.py  command_new.py  command_open.py  command_save.py
recipe_organizer/events/: event.py  event_observer.py  event_publisher.py
recipe_organizer/gui/: app_window.py
recipe_organizer/gui/event_display/: event_display.py
recipe_organizer/gui/menu_bar/: menu_bar.py
recipe_organizer/gui/recipe_form/: recipe_form.py
recipe_organizer/recipe/: recipe.py
tests/: test_app.py
tests/gui/: test_app_window.py
tests/recipe/: test_recipe.py
(+12 files in other folders)
