[tool.poetry]
name = "ingredient-extractor"
version = "1.0.0"
description = ""
authors = ["Jan Sommer <jan-sommer@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jsonpickle = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
