[tool.poetry]
name = "recipe-organizer"
version = "1.0.0"
description = "python recipe organization desktop application"
authors = ["Jan Sommer <jan-sommer@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
